--- a/PSC_Trigger.qsf
+++ b/PSC_Trigger.qsf
@@ -1,6 +1,6 @@
 # -------------------------------------------------------------------------- #
 #
-# Copyright (C) 2023  Intel Corporation. All rights reserved.
+# Copyright (C) 2024  Intel Corporation. All rights reserved.
 # Your use of Intel Corporation's design tools, logic functions 
 # and other software and tools, and any partner logic 
 # functions, and any output files from any of the foregoing 
@@ -18,15 +18,15 @@
 # -------------------------------------------------------------------------- #
 #
 # Quartus Prime
-# Version 22.1std.2 Build 922 07/20/2023 SC Lite Edition
-# Date created = 13:40:57  March 13, 2024
+# Version 23.1std.1 Build 993 05/14/2024 SC Lite Edition
+# Date created = 10:27:25  September 09, 2024
 #
 # -------------------------------------------------------------------------- #
 #
 # Notes:
 #
 # 1) The default values for assignments are stored in the file:
-#		psc_trigger_assignment_defaults.qdf
+#		PSC_Trigger_assignment_defaults.qdf
 #    If this file doesn't exist, see file:
 #		assignment_defaults.qdf
 #
@@ -43,9 +43,23 @@
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 23.1STD.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "16:15:00  FEBRUARY 11, 2024"
 set_global_assignment -name PROJECT_OUTPUT_DIRECTORY output_files
-set_global_assignment -name LAST_QUARTUS_VERSION "22.1std.2 Lite Edition"
+set_global_assignment -name LAST_QUARTUS_VERSION "23.1std.1 Lite Edition"
 set_global_assignment -name NUM_PARALLEL_PROCESSORS 4
 set_global_assignment -name FLOW_ENABLE_RTL_VIEWER ON
+set_global_assignment -name VERILOG_FILE testbench/top.v
+set_global_assignment -name TCL_SCRIPT_FILE testbench/top.tcl
+set_global_assignment -name VERILOG_FILE src/trigger_controller.v
+set_global_assignment -name VERILOG_FILE src/shift_register.v
+set_global_assignment -name VERILOG_FILE src/rising_edge_detector.v
+set_global_assignment -name VERILOG_FILE src/clock_divider.v
+set_global_assignment -name VHDL_FILE src/enc_8b10b.vhd
+set_global_assignment -name VERILOG_FILE src/crc8_stream.v
+set_global_assignment -name VERILOG_FILE src/crc8_core.v
+set_global_assignment -name VERILOG_FILE src/crc8_table.v
+set_global_assignment -name VERILOG_FILE src/psc_trigger_core.v
+set_global_assignment -name QIP_FILE ip/altpll_50_10.qip
+set_global_assignment -name QIP_FILE ip/altpll_50_1.qip
+set_global_assignment -name VERILOG_FILE src/psc_logic_clock.v
 
 # Pin & Location Assignments
 # ==========================
@@ -53,6 +67,8 @@ set_location_assignment PIN_R8 -to clk
 set_location_assignment PIN_E1 -to reset
 set_location_assignment PIN_J15 -to evr_trigger
 set_location_assignment PIN_D3 -to psc_output
+set_location_assignment PIN_A3 -to clk_10_logic
+set_location_assignment PIN_B5 -to load_register
 
 # Classic Timing Assignments
 # ==========================
@@ -117,49 +133,13 @@ set_global_assignment -name EDA_TEST_BENCH_NAME top -section_id eda_simulation
 set_global_assignment -name EDA_USER_COMPILED_SIMULATION_LIBRARY_DIRECTORY "C:/psc-trigger/simulation" -section_id eda_simulation
 set_global_assignment -name EDA_NETLIST_WRITER_OUTPUT_DIR simulation/ -section_id eda_simulation
 set_global_assignment -name EDA_EXTRA_ELAB_OPTION +define+SIM -section_id eda_simulation
+	set_global_assignment -name EDA_NATIVELINK_GENERATE_SCRIPT_ONLY OFF -section_id eda_simulation
+set_global_assignment -name EDA_MAINTAIN_DESIGN_HIERARCHY ON -section_id eda_simulation
+	set_global_assignment -name EDA_LAUNCH_CMD_LINE_TOOL OFF -section_id eda_simulation
+	set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST ON -section_id eda_simulation
 
 # end EDA_TOOL_SETTINGS(eda_simulation)
 # -------------------------------------
-
-# start EDA_TOOL_SETTINGS(eda_board_design_boundary_scan)
-# -------------------------------------------------------
-
-	# EDA Netlist Writer Assignments
-	# ==============================
-set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_boundary_scan
-
-# end EDA_TOOL_SETTINGS(eda_board_design_boundary_scan)
-# -----------------------------------------------------
-
-# start EDA_TOOL_SETTINGS(eda_board_design_timing)
-# ------------------------------------------------
-
-	# EDA Netlist Writer Assignments
-	# ==============================
-set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_timing
-
-# end EDA_TOOL_SETTINGS(eda_board_design_timing)
-# ----------------------------------------------
-
-# start EDA_TOOL_SETTINGS(eda_board_design_symbol)
-# ------------------------------------------------
-
-	# EDA Netlist Writer Assignments
-	# ==============================
-set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_symbol
-
-# end EDA_TOOL_SETTINGS(eda_board_design_symbol)
-# ----------------------------------------------
-
-# start EDA_TOOL_SETTINGS(eda_board_design_signal_integrity)
-# ----------------------------------------------------------
-
-	# EDA Netlist Writer Assignments
-	# ==============================
-set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_signal_integrity
-
-# end EDA_TOOL_SETTINGS(eda_board_design_signal_integrity)
-# --------------------------------------------------------
 
 # -------------------------
 # start ENTITY(psc_trigger)
@@ -174,6 +154,10 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to psc_output
 set_instance_assignment -name IO_STANDARD "2.5 V" -to evr_trigger
 set_instance_assignment -name IO_STANDARD "2.5 V" -to clk
 set_instance_assignment -name IO_STANDARD "2.5 V" -to reset
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to load_register
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to clk_10_logic
+set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to load_register
+set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to clk_10_logic
 
 	# start DESIGN_PARTITION(Top)
 	# ---------------------------
@@ -189,26 +173,5 @@ set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 
 # end ENTITY(psc_trigger)
 # -----------------------
-set_global_assignment -name EDA_GENERATE_RTL_SIMULATION_COMMAND_SCRIPT ON -section_id eda_simulation
 
-set_location_assignment PIN_A3 -to clk_10_logic
-set_location_assignment PIN_B5 -to load_register
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to load_register
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to clk_10_logic
-set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to load_register
-set_instance_assignment -name CURRENT_STRENGTH_NEW 8MA -to clk_10_logic
-set_global_assignment -name VERILOG_FILE testbench/top.v
-set_global_assignment -name TCL_SCRIPT_FILE testbench/top.tcl
-set_global_assignment -name VERILOG_FILE src/trigger_controller.v
-set_global_assignment -name VERILOG_FILE src/shift_register.v
-set_global_assignment -name VERILOG_FILE src/rising_edge_detector.v
-set_global_assignment -name VERILOG_FILE src/clock_divider.v
-set_global_assignment -name VHDL_FILE src/enc_8b10b.vhd
-set_global_assignment -name VERILOG_FILE src/crc8_stream.v
-set_global_assignment -name VERILOG_FILE src/crc8_core.v
-set_global_assignment -name VERILOG_FILE src/crc8_table.v
-set_global_assignment -name VERILOG_FILE src/psc_trigger_core.v
-set_global_assignment -name QIP_FILE ip/altpll_50_10.qip
-set_global_assignment -name QIP_FILE ip/altpll_50_1.qip
-set_global_assignment -name VERILOG_FILE src/psc_logic_clock.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
